[NOP,BUILD] tutorials now parse the data path from the command line instead of relying on being in the correct directory. This fixes also problems with CMake's add_test(WORKING_DIRECTORY..) property.
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/branches/Release1.11@11578 6adb6e08-d915-0410-941f-83917bcadc18

--- a/doc/code_examples/CMakeLists.txt
+++ b/doc/code_examples/CMakeLists.txt
@@ -53,8 +53,7 @@ foreach(i ${EXAMPLES_executables})
   # if not GUI and no style tests requested -> add as test
   if(NOT ${i} MATCHES "_GUI_" AND NOT ENABLE_STYLE_TESTING)
   	add_test(NAME ${i}
-             WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
-						 COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${i})
+						 COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${i} ${CMAKE_CURRENT_LIST_DIR})
   endif()
 endforeach(i)
 
