[FEATURE-#254] Added TOPPAS pipeline tests (cmake -DENABLE_PIPELINE_TESTING=ON [...]; make test_build; make test)
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/branches/Release1.11@11580 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -553,6 +553,9 @@ if("${PACKAGE_TYPE}" STREQUAL "none")
   endif(NOT ENABLE_STYLE_TESTING)
 endif("${PACKAGE_TYPE}" STREQUAL "none")
 
+### TOPPAS pipeline tests ###
+set(ENABLE_PIPELINE_TESTING OFF CACHE BOOL "Enables the additional testing of various TOPPAS pipelines when 'make test' is called.")
+
 ########################################################
 ###                   Examples                       ###
 ########################################################
