[FIX] added "xml-stylesheet" to FuzzyDiff whitelist for TOPPAS tests
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/branches/Release1.11@11581 6adb6e08-d915-0410-941f-83917bcadc18

--- a/source/TEST/TOPPAS/CMakeLists.txt
+++ b/source/TEST/TOPPAS/CMakeLists.txt
@@ -46,7 +46,7 @@
 set(TOPP_BIN_PATH ${OPENMS_BINARY_DIR})
 set(DATA_DIR_TOPP ${PROJECT_SOURCE_DIR}/TOPP)
 set(DATA_DIR_TOPPAS ${PROJECT_SOURCE_DIR}/TOPPAS)
-set(DIFF ${TOPP_BIN_PATH}/FuzzyDiff -ini ${DATA_DIR_TOPP}/FuzzyDiff.ini -whitelist "IdentificationRun " "SearchParameters ")
+set(DIFF ${TOPP_BIN_PATH}/FuzzyDiff -ini ${DATA_DIR_TOPP}/FuzzyDiff.ini -whitelist "IdentificationRun " "SearchParameters " "xml-stylesheet")
 
 
 ################### Labelfree quantification with IDMapping ####################
